# toll_system

./: .gitignore  Cargo.toml  README.md  Toll system flow.canvas
config/: env.json  schema_reset.sql
src/: main.rs
src/api/: life_services.rs  mod.rs
src/config/: db.rs  environment.rs  mod.rs  startup.rs
src/modules/: mod.rs
src/modules/blacklist/: db.rs  mod.rs  process.rs  requests.rs  services.rs
src/modules/booths/: db.rs  mod.rs  services.rs
src/modules/clients/: db.rs  mod.rs  services.rs
src/modules/clients_balances/: db.rs  mod.rs  services.rs
src/modules/discounts/: db.rs  mod.rs  services.rs
src/modules/penalties/: db.rs  mod.rs  services.rs
src/modules/registered_vehicles/: db.rs  mod.rs  services.rs
src/modules/transaction_logs/: db.rs  mod.rs  tests.rs
src/modules/transactions/: services.rs
src/modules/transit/: services.rs
src/modules/transit_fee_logs/: db.rs  mod.rs
src/modules/transit_logs/: db.rs  mod.rs  services.rs
src/modules/transit_rates/: db.rs  mod.rs  services.rs
src/modules/vehicle_types/: db.rs  mod.rs  services.rs  tests.rs
src/modules/violation_logs/: db.rs  mod.rs  services.rs
src/utilities/: datatypes.rs  functions.rs  macros.rs  mod.rs
tests/toll_system testing/: main.py
tests/toll_system testing/Blacklist/: mod.py  tests.py
tests/toll_system testing/manager/: services.py
tests/toll_system testing/utilities/: utilities.py
