[package]
name = "toll_system"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
chrono = { version = "0.4.38", features = [] }
error_mapper = "0.3.10"
lazy_static = "1.5.0"
mysql_async = { version = "0.34.2", features = ["chrono"]}
rust_decimal = "1.35.0"
serde = "1.0.202"
serde_json = "1.0.117"
the_logger = "0.5.3"
tokio = { version = "1.37.0", features = [] }

[features]
testing = []